# teeton

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: language_draft.md
examples/: bubble_sort.ttn  hello.ttn  is_palindrome.ttn  reverse_string.ttn  sample.ttn
src/: enums.h  environment.cpp  environment.h  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h  type.cpp  type.h  utils.cpp  utils.h
tests/: runner.sh
tests/in/: scans.in
tests/ttn/: append.ttn  arithmetics.ttn  break.ttn  comment.ttn  comparisons.ttn  complicated-condition.ttn  garbage-collector.ttn  get.ttn  if-else.ttn  list-comparison.ttn  not.ttn  scans.ttn  set.ttn  while.ttn
